tests/baselines/reference/parserSkippedTokens2.errors.txt
==== tests/cases/compiler/parserSkippedTokens2.ts (4 errors) ====
    \\
    ~
!!! parserSkippedTokens2.ts(1,1): error TS1001: Unexpected character "\".
    ~
!!! parserSkippedTokens2.ts(1,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
     ~
!!! parserSkippedTokens2.ts(1,2): error TS1001: Unexpected character "\".
     ~
!!! parserSkippedTokens2.ts(1,2): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.